# raygame

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  license.md  raygame.sln  readme.md  thirdparty.md
raygame/: BallPlayer.h  CMakeLists.txt  GameObject.h  MathUtils.h  endstate.h  game.cpp  game.h  gamestate.cpp  gamestate.h  main.cpp  menustate.h  packages.config  physics.cpp  physics.h  pickup.cpp  pickup.h  player.cpp  player.h  raygame.vcxproj  raygame.vcxproj.filters  shapes.cpp  shapes.h  splashstate.h  tForwardList.h  tObjectPool.h  tools.cpp  tri.cpp  tri.h  wariostate.h
raygame/test/: CMakeLists.txt  test.cpp  test.h
